--- a/client/src/Components/Banner.scss
+++ b/client/src/Components/Banner.scss
@@ -1,8 +1,55 @@
-.Banner{
-  .Banner-Container{
+.Banner {
+  .Banner-Container {
     height: 35rem;
     background: #538F8F;
     margin: 1.5rem;
     border-radius: 1.5rem;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    gap: 1rem;
+
+    .info {
+      margin-left: 4rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      & h1 {
+        margin: unset;
+        color: white;
+        font-size: 4rem;
+        font-weight: bold;
+      }
+
+      & p {
+        margin-top: unset;
+        color: white;
+        font-size: 1.5rem;
+        font-weight: normal;
+      }
+
+      .track-now {
+        margin-top: 3rem;
+        color: black;
+        background: white;
+        width: 10rem;
+        height: 4rem;
+        font-size: 1.25rem;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+      }
+    }
+
+    .data{
+      margin-right: 2rem;
+      display: grid;
+      place-items: center;
+      & img{
+        width: 100%;
+      }
+    }
   }
 }
